--- a/AUTHORS
+++ b/AUTHORS
@@ -21,6 +21,7 @@ Ferdi Gueran <ferdi.gueran@nextevolution.de>
 Gaël Beaudoin <gaboo@gaboo.org>
 Gerd von Egidy <gerd@egidy.de>
 Gunnar Beutner <gunnar.beutner@netways.de>
+Hendrik Röder <hendrik.biz@gmail.com>
 Ian Kelling <ian@iankelling.org>
 Ildar Hizbulin <hizel@vyborg.ru>
 James Pharaoh <james@pharaoh.uk>
