--- a/AUTHORS
+++ b/AUTHORS
@@ -54,6 +54,7 @@ Reto Zeder <reto.zeder@arcade.ch>
 Ricardo Bartels <ricardo@bitchbrothers.com>
 Sam Kottler <shk@linux.com>
 Sebastian Chrostek <sebastian@chrostek.net>
+Siyalrach Anton Thomas <sat@level8.dk>
 Stephan Platz <github@paalsteek.de>
 Steve McMaster <mcmaster@hurricanelabs.com>
 Tim Hardeck <thardeck@suse.de>
