--- a/AUTHORS
+++ b/AUTHORS
@@ -60,6 +60,7 @@ Steve McMaster <mcmaster@hurricanelabs.com>
 Tim Hardeck <thardeck@suse.de>
 Tobias von der Krone <tobias.vonderkrone@profitbricks.com>
 Tom Geissler <Tom@d7031.de>
+Valentin Hoebel <valentin@xenuser.org>
 Wolfgang Nieder <wnd@gmx.net>
 Yohan Jarosz <yohanjarosz@yahoo.fr>
 Zoltan Nagy <abesto@abesto.net>
