--- a/AUTHORS
+++ b/AUTHORS
@@ -57,6 +57,7 @@ Sebastian Chrostek <sebastian@chrostek.net>
 Siyalrach Anton Thomas <sat@level8.dk>
 Stephan Platz <github@paalsteek.de>
 Steve McMaster <mcmaster@hurricanelabs.com>
+Thomas Gelf <thomas@gelf.net>
 Tim Hardeck <thardeck@suse.de>
 Tobias von der Krone <tobias.vonderkrone@profitbricks.com>
 Tom Geissler <Tom@d7031.de>
