--- a/AUTHORS
+++ b/AUTHORS
@@ -54,6 +54,7 @@ Sam Kottler <shk@linux.com>
 Sebastian Chrostek <sebastian@chrostek.net>
 Stephan Platz <github@paalsteek.de>
 Steve McMaster <mcmaster@hurricanelabs.com>
+Thomas Gelf <thomas@gelf.net>
 Tim Hardeck <thardeck@suse.de>
 Tobias von der Krone <tobias.vonderkrone@profitbricks.com>
 Tom Geissler <Tom@d7031.de>
