--- a/AUTHORS
+++ b/AUTHORS
@@ -13,6 +13,7 @@ Christian Jonak <christian@jonak.org>
 Christian Lehmann <christian_lehmann@gmx.de>
 Claudio Künzler <ck@claudiokuenzler.com>
 David Beck <techiscool@gmail.com>
+Dinesh Majrekar <dinesh.majrekar@serverchoice.com>
 Dirk Goetz <dirk.goetz@netways.de>
 Dolf Schimmel <dolf@transip.nl>
 Edvin Seferovic <edvin@seferovic.net>
