--- a/AUTHORS
+++ b/AUTHORS
@@ -22,6 +22,7 @@ Ferdi Gueran <ferdi.gueran@nextevolution.de>
 Gaël Beaudoin <gaboo@gaboo.org>
 Gerd von Egidy <gerd@egidy.de>
 Gunnar Beutner <gunnar.beutner@netways.de>
+Hannes Van de Vel <h@nnes.be>
 Hendrik Röder <hendrik.biz@gmail.com>
 Ian Kelling <ian@iankelling.org>
 Ildar Hizbulin <hizel@vyborg.ru>
