--- a/AUTHORS
+++ b/AUTHORS
@@ -46,6 +46,7 @@ Marius Sturm <marius@torch.sh>
 Markus Frosch <markus@lazyfrosch.de>
 Martin Stiborsky <martin.stiborsky@gmail.com>
 Max Zhang <zhenzhan@tibco.com>
+Mhd Sulhan <ms@kilabit.info>
 Michael Friedrich <michael.friedrich@netways.de>
 Pall Sigurdsson <palli-github@minor.is>
 Paul Richards <paul@minimoo.org>
