--- a/AUTHORS
+++ b/AUTHORS
@@ -33,6 +33,7 @@ Jan Wagner <waja@cyconet.org>
 Jason Young <jyoung15@gmail.com>
 Jean-Marcel Flach <jean-marcel.flach@netways.de>
 Jesse Morgan <morgajel@gmail.com>
+Jo Goossens <jo.goossens@hosted-power.com>
 Johannes Meyer <johannes.meyer@netways.de>
 Jonas Meurer <jonas@freesources.org>
 Joseph L. Casale <jcasale@activenetwerx.com>
