--- a/AUTHORS
+++ b/AUTHORS
@@ -47,6 +47,7 @@ Marcus van Dam <marcus@marcusvandam.nl>
 Marius Sturm <marius@torch.sh>
 Markus Frosch <markus@lazyfrosch.de>
 Martin Stiborsky <martin.stiborsky@gmail.com>
+Matthaus Owens <matthaus@puppetlabs.com>
 Max Zhang <zhenzhan@tibco.com>
 Mhd Sulhan <ms@kilabit.info>
 Michael Friedrich <michael.friedrich@netways.de>
