--- a/AUTHORS
+++ b/AUTHORS
@@ -8,6 +8,7 @@ Benedikt Heine <bebe@bebehei.de>
 Bernd Erk <bernd.erk@icinga.org>
 Blerim Sheqa <blerim.sheqa@netways.de>
 Brian Dockter <specus@gmail.com>
+Bruno Lingner <mail@hugo.ro>
 Carlos Cesario <carloscesario@gmail.com>
 Christian Harke <ch.harke@gmail.com>
 Christian Jonak <christian@jonak.org>
