--- a/AUTHORS
+++ b/AUTHORS
@@ -47,6 +47,7 @@ Malte Rabenseifner <mail@malte-rabenseifner.de>
 Marcus van Dam <marcus@marcusvandam.nl>
 Marius Sturm <marius@torch.sh>
 Markus Frosch <markus@lazyfrosch.de>
+Markus Waldmüller <markus.waldmueller@netways.de>
 Martin Stiborsky <martin.stiborsky@gmail.com>
 Matthaus Owens <matthaus@puppetlabs.com>
 Max Zhang <zhenzhan@tibco.com>
