--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,42 @@ Please check [doc/1-about.md].
 
 ## What's New
 
+### What's New in Version 2.4.1
+
+#### Changes
+
+* ITL
+    * Add running_kernel_use_sudo option for the running_kernel check
+* Configuration
+    * Add global constants: `PlatformName`. `PlatformVersion`, `PlatformKernel` and `PlatformKernelVersion`
+* CLI
+    * Use NodeName and ZoneName constants for 'node setup' and 'node wizard' 
+
+#### Feature
+
+* Feature 10622: Add by_ssh_options argument for the check_by_ssh plugin
+* Feature 10693: Add running_kernel_use_sudo option for the running_kernel check
+* Feature 10716: Use NodeName and ZoneName constants for 'node setup' and 'node wizard'
+
+#### Bugfixes
+
+* Bug 10528: Documentation example in "Access Object Attributes at Runtime" doesn't work correctly
+* Bug 10615: Build fails on SLES 11 SP3 with GCC 4.8
+* Bug 10632: "node wizard" does not ask user to verify SSL certificate
+* Bug 10641: API setup command incorrectly overwrites existing certificates
+* Bug 10643: Icinga 2 crashes when ScheduledDowntime objects are used
+* Bug 10645: Documentation for schedule-downtime is missing required paremeters
+* Bug 10648: lib/base/process.cpp SIGSEGV on Debian squeeze / RHEL 6
+* Bug 10661: Incorrect web inject URL in documentation
+* Bug 10663: Incorrect redirect for stderr in /usr/lib/icinga2/prepare-dirs
+* Bug 10667: Indentation in command-plugins.conf
+* Bug 10677: node wizard checks for /var/lib/icinga2/ca directory but not the files
+* Bug 10690: CLI command 'repository add' doesn't work
+* Bug 10692: Fix typos in the documentation
+* Bug 10708: Windows setup wizard crashes when InstallDir registry key is not set
+* Bug 10710: Incorrect path for icinga2 binary in development documentation
+* Bug 10720: Remove --master_zone from --help because it is currently not implemented
+
 ### What's New in Version 2.4.0
 
 #### Changes
