--- a/AUTHORS
+++ b/AUTHORS
@@ -43,6 +43,7 @@ Lars Engels <lars.engels@0x20.net>
 Lee Clemens <java@leeclemens.net>
 Lennart Betz <lennart.betz@netways.de>
 Louis Sautier <sautier.louis@gmail.com>
+Luca Lesinigo <luca@lm-net.it>
 Malte Rabenseifner <mail@malte-rabenseifner.de>
 Marcus van Dam <marcus@marcusvandam.nl>
 Marius Sturm <marius@torch.sh>
