--- a/AUTHORS
+++ b/AUTHORS
@@ -53,6 +53,7 @@ Matthaus Owens <matthaus@puppetlabs.com>
 Max Zhang <zhenzhan@tibco.com>
 Mhd Sulhan <ms@kilabit.info>
 Michael Friedrich <michael.friedrich@netways.de>
+Michael Kraus <michael.kraus@consol.de>
 Pall Sigurdsson <palli-github@minor.is>
 Paul Richards <paul@minimoo.org>
 Petr Ruzicka <petr.ruzicka@gmail.com>
