Added exclude parameter in disk-windows CheckCommand
Added missing command parameter in definition for disk-windows CheckCommand
in order to be able to exclude certain drives from being checked.
This parameter was addressed in feature #9201
Further details can be found in feature #10787

Signed-off-by: Jean Flach <jean-marcel.flach@netways.de>

fixes #10787

--- a/AUTHORS
+++ b/AUTHORS
@@ -20,7 +20,9 @@ David Beck <techiscool@gmail.com>
 Dinesh Majrekar <dinesh.majrekar@serverchoice.com>
 Dirk Goetz <dirk.goetz@netways.de>
 Dolf Schimmel <dolf@transip.nl>
+Eduard Güldner <eduard.gueldner@gmail.com>
 Edvin Seferovic <edvin@seferovic.net>
+Élie Bouttier <elie@bouttier.eu>
 Eric Lippmann <eric.lippmann@netways.de>
 Ferdi Gueran <ferdi.gueran@nextevolution.de>
 Gaël Beaudoin <gaboo@gaboo.org>
@@ -35,12 +37,12 @@ Jan Andres <jan.andres@berenberg.de>
 Jan Wagner <waja@cyconet.org>
 Jason Young <jyoung15@gmail.com>
 Jean-Marcel Flach <jean-marcel.flach@netways.de>
+Jérôme Drouet <jerome.drouet@gmail.com>
 Jesse Morgan <morgajel@gmail.com>
 Jo Goossens <jo.goossens@hosted-power.com>
 Johannes Meyer <johannes.meyer@netways.de>
 Jonas Meurer <jonas@freesources.org>
 Joseph L. Casale <jcasale@activenetwerx.com>
-Jérôme Drouet <jerome.drouet@gmail.com>
 Lars Engels <lars.engels@0x20.net>
 Lee Clemens <java@leeclemens.net>
 Lennart Betz <lennart.betz@netways.de>
@@ -52,6 +54,7 @@ Marius Sturm <marius@torch.sh>
 Markus Frosch <markus@lazyfrosch.de>
 Markus Waldmüller <markus.waldmueller@netways.de>
 Martin Stiborsky <martin.stiborsky@gmail.com>
+Mathieu Lutfy <mathieu@bidon.ca>
 Matthaus Owens <matthaus@puppetlabs.com>
 Max Zhang <zhenzhan@tibco.com>
 Mhd Sulhan <ms@kilabit.info>
@@ -59,12 +62,14 @@ Michael Friedrich <michael.friedrich@netways.de>
 Michael Kraus <michael.kraus@consol.de>
 Pall Sigurdsson <palli-github@minor.is>
 Paul Richards <paul@minimoo.org>
+Per von Zweigbergk <pvz@itassistans.se>
 Petr Ruzicka <petr.ruzicka@gmail.com>
 Phil Hutchinson <phil@volumedia.co.uk>
 Ralph Breier <ralph.breier@roedl.com>
 Reto Zeder <reto.zeder@arcade.ch>
 Ricardo Bartels <ricardo@bitchbrothers.com>
 Sam Kottler <shk@linux.com>
+Sebastian Brückner <mail@invlid.com>
 Sebastian Chrostek <sebastian@chrostek.net>
 Simon Ruderich <simon@ruderich.org>
 Siyalrach Anton Thomas <sat@level8.dk>
@@ -78,4 +83,3 @@ Valentin Hoebel <valentin@xenuser.org>
 Wolfgang Nieder <wnd@gmx.net>
 Yohan Jarosz <yohanjarosz@yahoo.fr>
 Zoltan Nagy <abesto@abesto.net>
-Élie Bouttier <elie@bouttier.eu>
