--- a/AUTHORS
+++ b/AUTHORS
@@ -3,6 +3,7 @@ Alexander Fuhr <alexander.fuhr@netways.de>
 Alexander Schomburg <script.acc@alex.schomb.org>
 Alexander Wirt <formorer@debian.org>
 Andrew Meyer <ameyer+secure@nodnetwork.org>
+Arnd Hannemann <arnd@arndnet.de>
 Bastian Guse <bguse@nocopy.de>
 Benedikt Heine <bebe@bebehei.de>
 Bernd Erk <bernd.erk@icinga.org>
