Fix mongodb CheckCommand
Signed-off-by: Jean Flach <jean-marcel.flach@netways.de>

fixes #10979

--- a/AUTHORS
+++ b/AUTHORS
@@ -14,6 +14,7 @@ Carlos Cesario <carloscesario@gmail.com>
 Christian Harke <ch.harke@gmail.com>
 Christian Jonak <christian@jonak.org>
 Christian Lehmann <christian_lehmann@gmx.de>
+Claudio Kuenzler <ck@claudiokuenzler.com>
 Claudio Künzler <ck@claudiokuenzler.com>
 Daniil Yaroslavtsev <dyaroslavtsev@confyrm.com>
 David Beck <techiscool@gmail.com>
