Fix AUTHORS and .mailmap
A name appears twice

fixes #10981

--- a/AUTHORS
+++ b/AUTHORS
@@ -14,7 +14,8 @@ Carlos Cesario <carloscesario@gmail.com>
 Christian Harke <ch.harke@gmail.com>
 Christian Jonak <christian@jonak.org>
 Christian Lehmann <christian_lehmann@gmx.de>
-Claudio Künzler <ck@claudiokuenzler.com>
+Claudio Kuenzler <ck@claudiokuenzler.com>
+Daniil Yaroslavtsev <dyaroslavtsev@confyrm.com>
 David Beck <techiscool@gmail.com>
 Dinesh Majrekar <dinesh.majrekar@serverchoice.com>
 Dirk Goetz <dirk.goetz@netways.de>
