--- a/AUTHORS
+++ b/AUTHORS
@@ -22,7 +22,6 @@ Dirk Goetz <dirk.goetz@netways.de>
 Dolf Schimmel <dolf@transip.nl>
 Eduard Güldner <eduard.gueldner@gmail.com>
 Edvin Seferovic <edvin@seferovic.net>
-Élie Bouttier <elie@bouttier.eu>
 Eric Lippmann <eric.lippmann@netways.de>
 Ferdi Gueran <ferdi.gueran@nextevolution.de>
 Gaël Beaudoin <gaboo@gaboo.org>
@@ -37,12 +36,12 @@ Jan Andres <jan.andres@berenberg.de>
 Jan Wagner <waja@cyconet.org>
 Jason Young <jyoung15@gmail.com>
 Jean-Marcel Flach <jean-marcel.flach@netways.de>
-Jérôme Drouet <jerome.drouet@gmail.com>
 Jesse Morgan <morgajel@gmail.com>
 Jo Goossens <jo.goossens@hosted-power.com>
 Johannes Meyer <johannes.meyer@netways.de>
 Jonas Meurer <jonas@freesources.org>
 Joseph L. Casale <jcasale@activenetwerx.com>
+Jérôme Drouet <jerome.drouet@gmail.com>
 Lars Engels <lars.engels@0x20.net>
 Lee Clemens <java@leeclemens.net>
 Lennart Betz <lennart.betz@netways.de>
@@ -77,9 +76,11 @@ Stephan Platz <github@paalsteek.de>
 Steve McMaster <mcmaster@hurricanelabs.com>
 Thomas Gelf <thomas@gelf.net>
 Tim Hardeck <thardeck@suse.de>
+Tobias Birnbaum <osterd@gmx.de>
 Tobias von der Krone <tobias.vonderkrone@profitbricks.com>
 Tom Geissler <Tom@d7031.de>
 Valentin Hoebel <valentin@xenuser.org>
 Wolfgang Nieder <wnd@gmx.net>
 Yohan Jarosz <yohanjarosz@yahoo.fr>
 Zoltan Nagy <abesto@abesto.net>
+Élie Bouttier <elie@bouttier.eu>
