--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
+Adam James <adam.james@transitiv.co.uk>
 Alexander A. Klimov <alexander.klimov@netways.de>
 Alexander Fuhr <alexander.fuhr@netways.de>
 Alexander Schomburg <script.acc@alex.schomb.org>
@@ -75,6 +76,7 @@ Siyalrach Anton Thomas <sat@level8.dk>
 Stephan Platz <github@paalsteek.de>
 Steve McMaster <mcmaster@hurricanelabs.com>
 Thomas Gelf <thomas@gelf.net>
+Thomas Widhalm <thomas.widhalm@netways.de>
 Tim Hardeck <thardeck@suse.de>
 Tobias Birnbaum <osterd@gmx.de>
 Tobias von der Krone <tobias.vonderkrone@profitbricks.com>
